haas num for opsman

--- a/config/opsman.yml
+++ b/config/opsman.yml
@@ -18,7 +18,7 @@ opsman-configuration:
     ntp: time.svc.pivotal.io                     # example: ntp.ubuntu.com
     ssh_password: ((opsman_ssh_password))
     ssh_public_key: ((opsman_ssh_key.public_key))            # for Ops Manager >= 2.3
-    hostname: ops-manager.sandbox.haas-<num>.pez.pivotal.io
+    hostname: ops-manager.sandbox.haas-228.pez.pivotal.io
     network: PAS-Infrastructure                 # vcenter network to deploy to
     netmask: 255.255.255.0
     gateway: 192.168.1.1
